# ics_caldav_sync

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ics_caldav_sync.py  pyproject.toml  requirements.txt  synchronise.py
.github/workflows/: docker-image.yml  tests.yml
tests/: test_compare.py  test_init.py  test_integration.py  test_main.py  test_methods.py  test_synchronise.py  utils.py
tests/fixtures/: all_day.ics  malformed.ics  recurring_with_override.ics  vtimezone.ics
