[tool.setuptools]
[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm>=9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ics_caldav_sync"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{name = "Przemysław Buczkowski", email = "prem@prem.moe"}]
description = "ICS to CalDAV synchronisation."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Internet",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ics", "caldav", "sync", "synchronization", "calendar", "icalendar"]

dependencies = [
    "arrow==1.4.0",
    "caldav==3.0.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "icalendar==7.0.3",
    "idna==3.11",
    "lxml==6.0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "recurring-ical-events==3.8.1",
    "requests==2.32.5",
    "rich==14.3.3",
    "six==1.17.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "vobject==0.9.9",
    "x-wr-timezone==2.0.1",
]

[project.optional-dependencies]
dev = [
    "black==26.3.0",
    "build==1.4.0",
    "licensecheck==2025.1.0",
    "pytest==9.0.2",
    "types-python-dateutil==2.9.0.20260305",
    "twine==6.2.0",
    "vermin==1.8.0"
]

[project.scripts]
ics_caldav_sync = "ics_caldav_sync:main"

[project.urls]
Repository = "https://github.com/przemub/ics_caldav_sync"
